crates/review-buddy/tests/snapshots/mouse__text_selection_100x30_default_theme.snap
---
source: crates/review-buddy/tests/mouse.rs
expression: "marked(&a, &buffer)"
---
 review buddy  ·  demo · 4 sources · 7 changes                                           Liminal HQ
 GH liminal-hq/review-buddy#214 · liminal-hq · Add a menu bar and keyboard-driven menus
╭ files 3 ───────────────────────╮╭ src/ui/menus.rs ───────────────────────────────────────────────╮
│› · src/ui/menus.rs       +22 −1││              @@ -10,7 +10,9 @@ use crate::app::Action;         │
│  · src/ui/menubar.rs      +8 −0││›   10   10                                                     │
│  · src/ui/mod.rs          +2 −0││    11   11   ⟦pub struct Menu {⟧                                 │
│                                ││    12   12   ⟦    items: Vec<MenuItem>,⟧                         │
│                                ││         13 +     selected: usize,                              │
│                                ││         14 +     open: bool,                                   │
│                                ││    13   15   }                                                 │
│                                ││    14   16                                                     │
│                                ││    15   17   impl Menu {                                       │
│                                ││    16   18       pub fn new(items: Vec<MenuItem>) -> Self {    │
│                                ││              @@ -34,6 +36,24 @@ impl Menu {                    │
│                                ││    34   36       pub fn len(&self) -> usize {                  │
│                                ││    35   37           self.items.len()                          │
│                                ││    36   38       }                                             │
│                                ││         39 +                                                   │
│                                ││         40 +     pub fn select_next(&mut self) {               │
│                                ││         41 +         if self.items.is_empty() {                │
│                                ││         42 +             return;                               │
│ Your review · pending ─────────││         43 +         }                                         │
│1 suggestion · 0 comments       ││         44 +         self.selected = (self.selected + 1) % sel…│
│0 of 3 files viewed             ││              ╭─ thread · line 44 ─────────────────────────────╮│
│Your review: not started        ││              │ jo · 1d                                        ││
│  menus.rs:51 Fewer branches th…││              │ Should this wrap round to the first item? Most ││
│a approve · c comment           ││              │ menus I use stop at the end.                   ││
│x request changes · R review    ││              │ ada · 20h                                      ││
╰────────────────────────────────╯╰ hunk 1 of 3 · file 1 of 3 ─────────────────────────────────────╯
 j/k move  n/p hunk    · Drag code to copy text. Drag the line numbers to pick lines to comment on.
